makes global AdvanceRules execute per track, matching the round-and-track ranking model